--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo02</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Exemplo 02</h1>
     <canvas></canvas>
-    <img src ="assets/skeleton01.png" />
+    <img src="assets/skeleton01.png" />
     <script>
-        const canvas = document.querySelector("canvas");
-        const ctx = canvas.getContext("2d");
-        ctx.fillStyle = "darkgreen";
-        ctx.fillRect(0,0,canvas.width,canvas.height);
+      const canvas = document.querySelector("canvas");
+      const ctx = canvas.getContext("2d");
+      const skelly = document.querySelector("img");
+
+      skelly.addEventListener("load", paginaCarregada);
+
+      ctx.fillStyle = "darkgreen";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      function paginaCarregada(){
+        ctx.drawImage(skelly, 0, 0);
+      }
     </script>
-</body>
+  </body>
 </html>
