Adiciona propriedades das poses

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
       let pose = 2;
       let quadro = 0;
       const POSES = [
-        7,
-        7,
-        7,
-        7,
-        8,
-        8,
-        8,
-        8,
-        9,
-        9,
-        9,
-        9,
-        6,
-        6,
-        6,
-        6,
-        13,
-        13,
-        13,
-        13,
-        6,
+        { qmax: 7, pv: 9 },
+        { qmax: 7, pv: 9 },
+        { qmax: 7, pv: 9 },
+        { qmax: 7, pv: 9 },
+        { qmax: 8, pv: 9 },
+        { qmax: 8, pv: 9 },
+        { qmax: 8, pv: 9 },
+        { qmax: 8, pv: 9 },
+        { qmax: 9, pv: 9 },
+        { qmax: 9, pv: 9 },
+        { qmax: 9, pv: 9 },
+        { qmax: 9, pv: 9 },
+        { qmax: 6, pv: 9 },
+        { qmax: 6, pv: 9 },
+        { qmax: 6, pv: 9 },
+        { qmax: 6, pv: 9 },
+        { qmax: 13, pv: 18 },
+        { qmax: 13, pv: 18 },
+        { qmax: 13, pv: 18 },
+        { qmax: 13, pv: 18 },
+        { qmax: 6, pv: 9 },
       ];
 
       function paginaCarregada() {}
@@ -61,7 +61,8 @@
         t0 = t0 ?? t;
         dt = (t - t0) / 1000;
         desenhaFundo();
-        quadro = quadro + 1 >= POSES[pose] ? 0 : quadro + 9 * dt;
+        quadro =
+          quadro + 1 >= POSES[pose].qmax ? 0 : quadro + POSES[pose].pv * dt;
         ctx.drawImage(
           skelly,
           //sx, sy, sw, sh
