--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
           bufferword = bufferword.toLowerCase();
           if (bufferword.slice(2) == "praisethesun") {
             mod = 1;
-            setTimeout(function () {
-              mod = 0;
-            }, 6000);
           }
         }
         switch (event.key) {
@@ -74,10 +71,13 @@
       let dt;
       requestAnimationFrame(passo);
 
+      let timer = 0;
       function passo(t) {
         t0 = t0 ?? t;
         dt = (t - t0) / 1000;
         desenhaFundo();
+        if (mod == 1) timer = timer + dt;
+        if (timer > 6) mod = 0;
         addEventListener("keydown", teclaPressionada);
         quadro =
           quadro + 1 >= (mod + 1) * POSES[pose].qmax[mod]
